--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,15 +1,17 @@
+
 <div class="container">
         <h2>User Settings</h2>
-        <form>
+    
+        <form #form="ngForm">
     
           <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" class="form-control" />
+            <input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name"/>
           </div>
     
           <div class="form-check form-group">
             <input class="form-check-input" type="checkbox"
-                    id="emailOffers" name="emailOffers">
+                    id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers">
             <label class="form-check-label" for="emailOffers">
               Email Special Offers
             </label>
@@ -19,21 +21,21 @@
           <div class="form-group">
             <div class="form-check">
               <input class="form-check-input" type="radio" name="interfaceStyle" 
-                     id="lightInterface" value="light" checked>
+                     id="lightInterface" value="light" [(ngModel)]="userSettings.interfaceStyle">
               <label class="form-check-label" for="lightInterface">
                 Light
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="interfaceStyle" 
-                     id="mediumInterface" value="medium">
+                     id="mediumInterface" value="medium" [(ngModel)]="userSettings.interfaceStyle">
               <label class="form-check-label" for="mediumInterface">
                 Medium
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="interfaceStyle" 
-                      id="darkInterface" value="dark">
+                      id="darkInterface" value="dark" [(ngModel)]="userSettings.interfaceStyle">
               <label class="form-check-label" for="darkInterface">
                 Dark
               </label>
@@ -42,7 +44,8 @@
     
           <div class="form-group">
             <label for="subscriptionType">Subscription Type</label>
-            <select class="form-control" id="subscriptionType">
+            <select class="form-control" id="subscriptionType" 
+                    name="subscriptionType" [(ngModel)]="userSettings.subscriptionType">
               <option>Monthly</option>
               <option>Annual</option>
               <option>Lifetime</option>
@@ -52,10 +55,11 @@
           <div class="form-group">
             <label for="notes">Notes</label>
             <textarea id="notes" name="notes" class="form-control" 
-                      rows="3"></textarea>
-          </div>   
-         
+                      rows="3" [(ngModel)]="userSettings.notes"></textarea>
+          </div>      
     
           <button class="btn btn-primary">Send</button>
         </form>
       </div>
+    
+      <h3>{{ originalUserSettings | json }}</h3>
