--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -2,16 +2,19 @@
 <div class="container">
         <h2>User Settings</h2>
     
-        <form #form="ngForm">
+        <form #form="ngForm" (ngSubmit)="onSubmit(form)">
     
           <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name"/>
-          </div>
+            <input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name" required #nameField="ngModel"
+            (blur) = "onBlur(nameField)"
+            [class.field-error]="form.submitted && nameField.invalid">
+        <div [hidden]="!form.submitted || nameField.valid" class="alert alert-danger">Enter A Name</div> 
+        </div>
     
           <div class="form-check form-group">
             <input class="form-check-input" type="checkbox"
-                    id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers">
+                    id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers" >
             <label class="form-check-label" for="emailOffers">
               Email Special Offers
             </label>
