htpp form posting and data

--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -6,15 +6,19 @@
     
           <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name" required #nameField="ngModel"
-            (blur) = "onBlur(nameField)"
-            [class.field-error]="form.submitted && nameField.invalid">
-        <div [hidden]="!form.submitted || nameField.valid" class="alert alert-danger">Enter A Name</div> 
-        </div>
+            <input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name"
+                  required #nameField="ngModel" 
+                  (blur)="onBlur(nameField)"
+                  [class.field-error]="form.submitted && nameField.invalid">
+            <div [hidden]="!form.submitted || nameField.valid"
+              class="alert alert-danger">
+              Enter a name
+            </div>
+          </div>
     
           <div class="form-check form-group">
             <input class="form-check-input" type="checkbox"
-                    id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers" >
+                    id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers">
             <label class="form-check-label" for="emailOffers">
               Email Special Offers
             </label>
@@ -49,9 +53,9 @@
             <label for="subscriptionType">Subscription Type</label>
             <select class="form-control" id="subscriptionType" 
                     name="subscriptionType" [(ngModel)]="userSettings.subscriptionType">
-              <option>Monthly</option>
-              <option>Annual</option>
-              <option>Lifetime</option>
+              <option *ngFor="let type of subscriptionTypes | async">
+                {{ type }}
+              </option>
             </select>
           </div>
     
@@ -61,8 +65,10 @@
                       rows="3" [(ngModel)]="userSettings.notes"></textarea>
           </div>      
     
+          <div [hidden]="!postError"
+              class="alert alert-danger">
+              {{ postErrorMessage }}
+          </div>
           <button class="btn btn-primary">Send</button>
         </form>
       </div>
-    
-      <h3>{{ originalUserSettings | json }}</h3>
