--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -15,6 +15,11 @@
               Enter a name
             </div>
           </div>
+                  <button type="button" class="btn btn-primary"
+                        [(ngModel)]="singleModel" btnCheckbox
+                        btnCheckboxTrue="1" btnCheckboxFalse="0">
+                  Single Toggle
+                   </button>
     
           <div class="form-check form-group">
             <input class="form-check-input" type="checkbox"
@@ -26,28 +31,17 @@
     
           <p>User Interface Style</p>
           <div class="form-group">
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="interfaceStyle" 
-                     id="lightInterface" value="light" [(ngModel)]="userSettings.interfaceStyle">
-              <label class="form-check-label" for="lightInterface">
-                Light
-              </label>
+
+              <div class="btn-group">
+                <label class="btn btn-primary" [(ngModel)]="userSettings.interfaceStyle" name="interfaceStyle"
+                        btnRadio="Light" tabindex="0" role="button">Light</label>
+                <label class="btn btn-primary" [(ngModel)]="userSettings.interfaceStyle" name="interfaceStyle"
+                        btnRadio="Medium" tabindex="0" role="button">Medium</label>
+                <label class="btn btn-primary" [(ngModel)]="userSettings.interfaceStyle" name="interfaceStyle"
+                        btnRadio="Dark" tabindex="0" role="button">Dark</label>
+              </div>
+              
             </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="interfaceStyle" 
-                     id="mediumInterface" value="medium" [(ngModel)]="userSettings.interfaceStyle">
-              <label class="form-check-label" for="mediumInterface">
-                Medium
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="interfaceStyle" 
-                      id="darkInterface" value="dark" [(ngModel)]="userSettings.interfaceStyle">
-              <label class="form-check-label" for="darkInterface">
-                Dark
-              </label>
-            </div>
-          </div>
     
           <div class="form-group">
             <label for="subscriptionType">Subscription Type</label>
